--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -26,6 +26,7 @@
 
 .main--container--select {
   margin-top: 20px;
+  outline: none;
 }
 
 .main--input {
@@ -59,6 +60,13 @@
   font-weight: 600;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.07);
   padding: 10px 15px;
+}
+
+/*DarkMode*/
+
+.darkModeInput {
+  background-color: hsl(209, 23%, 22%);
+  color: hsl(0, 0%, 100%);
 }
 
 @media (min-width: 426px) {
