--- a/src/templates/Home/styles.css
+++ b/src/templates/Home/styles.css
@@ -7,3 +7,7 @@
 body {
   width: 100%;
 }
+
+.darkModeBackgroung {
+  background-color: hsl(207, 26%, 17%);
+}
